src/grammar/grammer.ebnf
# Grammar

```ebnf
expression ::= projection
             | selection
             | natural-join
             | theta-join
             | cartesian-product
             | division
             | rename
             | union
             | intersection
             | difference
             | relation
             | "(" expression ")"

projection ::= "π" 
               "[" attribute_list "]"
               "(" expression ")"

selection ::= "σ"
              "[" condition "]"
              "(" expression ")"

natural-join ::= expression "⋈" expression  

theta-join ::= expression "⋈θ" "[" condition "]" expression 

cartesian-product ::= expression "×" expression

division ::= expression "÷" expression

union ::= expression "∪" expression

intersection ::= expression "∩" expression

difference ::= expression "−" expression

rename ::= "ρ"
           identifier
           "(" expression ")"

relation ::= identifier

attribute_list ::= identifier ("," identifier)*

condition ::= disjunction

disjunction ::= conjunction (or_op conjunction)*

conjunction ::= negation_expr (and_op negation_expr)*

negation_expr ::= negation_expr_inner

negation_expr_inner ::= "¬" negation_expr_inner
                      | comparison
                      | "(" condition ")"

comparison ::= operand comparator operand

operand ::= identifier | literal

comparator ::= "=" | "≠" | "<" | ">" | "<=" | ">="

and_op ::= "∧"

or_op  ::= "∨"

negation ::= "¬"

identifier ::= letter (letter | digit | "_")*

literal ::= number | string

number ::= digit+
```
